// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Selector - Demo Check mode 1`] = `
<div class="ui-example-child ui-example-child-selector ui-example-child-selector-3">
  <fieldset class="ui-field">
    <!---->
    <div class="ui-field-content">
      <div class="ui-field-item is-browser">
        <div class="ui-field-item-content"><label class="ui-field-item-title">Check模式</label>
          <!---->
          <div class="ui-field-item-control">
            <!---->
          </div>
          <div class="ui-field-item-right"> <i class="ui-icon icon-font ui-icon-arrow-right arrow-right md" style="color:;"></i></div>
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
  <div class="ui-selector is-check">
    <div class="ui-popup inner-popup with-mask bottom" style="display:none;">
      <div name="ui-mask-fade" class="ui-popup-mask" style="display:none;"></div>
      <div name="ui-slide-up" class="ui-popup-box ui-slide-up" style="display:none;">
        <div class="ui-popup-title-bar title-align-center large-radius">
          <div class="title-bar-left ui-popup-cancel">取消</div>
          <div class="title-bar-title">
            <p class="title">Check模式</p>
            <!---->
          </div>
          <div class="title-bar-right ui-popup-confirm">确认</div>
          <!---->
        </div>
        <div class="ui-selector-container">
          <div class="ui-scroll-view" style="max-height:auto;min-height:320px;">
            <!---->
            <div class="scroll-view-container">
              <!---->
              <div class="ui-radio-list ui-selector-list">
                <div class="ui-cell-item ui-radio-item">
                  <div class="ui-cell-item-body">
                    <!---->
                    <div class="ui-cell-item-content">
                      <p class="ui-cell-item-title">选项一</p>
                      <!---->
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-radio">
                        <div class="ui-radio-icon"><i class="ui-icon icon-font ui-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="ui-cell-item ui-radio-item">
                  <div class="ui-cell-item-body">
                    <!---->
                    <div class="ui-cell-item-content">
                      <p class="ui-cell-item-title">选项二</p>
                      <!---->
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-radio">
                        <div class="ui-radio-icon"><i class="ui-icon icon-font ui-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="ui-cell-item ui-radio-item is-disabled">
                  <div class="ui-cell-item-body">
                    <!---->
                    <div class="ui-cell-item-content">
                      <p class="ui-cell-item-title">选项三</p>
                      <!---->
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-radio is-disabled">
                        <div class="ui-radio-icon"><i class="ui-icon icon-font ui-icon-check-disabled check-disabled md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="ui-cell-item ui-radio-item no-border">
                  <div class="ui-cell-item-body">
                    <!---->
                    <div class="ui-cell-item-content">
                      <p class="ui-cell-item-title">选项四</p>
                      <!---->
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-radio">
                        <div class="ui-radio-icon"><i class="ui-icon icon-font ui-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <!---->
            </div>
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Selector - Demo Confirmed mode 1`] = `
<div class="ui-example-child ui-example-child-selector ui-example-child-selector-2">
  <fieldset class="ui-field">
    <!---->
    <div class="ui-field-content">
      <div class="ui-field-item is-solid is-browser">
        <div class="ui-field-item-content"><label class="ui-field-item-title">确认模式</label>
          <!---->
          <div class="ui-field-item-control">
            <!---->
          </div>
          <div class="ui-field-item-right"> <i class="ui-icon icon-font ui-icon-arrow-right arrow-right md" style="color:;"></i></div>
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
  <div class="ui-selector is-normal">
    <div class="ui-popup inner-popup with-mask bottom" style="display:none;">
      <div name="ui-mask-fade" class="ui-popup-mask" style="display:none;"></div>
      <div name="ui-slide-up" class="ui-popup-box ui-slide-up" style="display:none;">
        <div class="ui-popup-title-bar title-align-center large-radius">
          <div class="title-bar-left ui-popup-cancel">取消</div>
          <div class="title-bar-title">
            <p class="title">确认模式</p>
            <!---->
          </div>
          <div class="title-bar-right ui-popup-confirm">确认</div>
          <!---->
        </div>
        <div class="ui-selector-container">
          <div class="ui-scroll-view" style="max-height:auto;min-height:320px;">
            <!---->
            <div class="scroll-view-container">
              <!---->
              <div class="ui-radio-list ui-selector-list">
                <div class="ui-cell-item ui-radio-item">
                  <div class="ui-cell-item-body multilines">
                    <!---->
                    <div class="ui-cell-item-content">
                      <p class="ui-cell-item-title">选项一</p>
                      <p class="ui-cell-item-brief">选项一说明</p>
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-radio">
                        <div class="ui-radio-icon"><i class="ui-icon icon-font ui-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="ui-cell-item ui-radio-item">
                  <div class="ui-cell-item-body multilines">
                    <!---->
                    <div class="ui-cell-item-content">
                      <p class="ui-cell-item-title">选项二</p>
                      <p class="ui-cell-item-brief">选项二说明</p>
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-radio">
                        <div class="ui-radio-icon"><i class="ui-icon icon-font ui-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="ui-cell-item ui-radio-item">
                  <div class="ui-cell-item-body multilines">
                    <!---->
                    <div class="ui-cell-item-content">
                      <p class="ui-cell-item-title">选项三</p>
                      <p class="ui-cell-item-brief">选项三说明</p>
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-radio">
                        <div class="ui-radio-icon"><i class="ui-icon icon-font ui-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="ui-cell-item ui-radio-item no-border">
                  <div class="ui-cell-item-body multilines">
                    <!---->
                    <div class="ui-cell-item-content">
                      <p class="ui-cell-item-title">选项四</p>
                      <p class="ui-cell-item-brief">选项四说明</p>
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-radio">
                        <div class="ui-radio-icon"><i class="ui-icon icon-font ui-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <!---->
            </div>
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Selector - Demo Custom options 1`] = `
<div class="ui-example-child ui-example-child-selector ui-example-child-selector-1">
  <fieldset class="ui-field">
    <!---->
    <div class="ui-field-content">
      <div class="ui-field-item is-solid is-browser">
        <div class="ui-field-item-content"><label class="ui-field-item-title">自定义</label>
          <!---->
          <div class="ui-field-item-control">
            <!---->
          </div>
          <div class="ui-field-item-right"> <i class="ui-icon icon-font ui-icon-arrow-right arrow-right md" style="color:;"></i></div>
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
  <div class="ui-selector is-check">
    <div class="ui-popup inner-popup with-mask bottom" style="display:none;">
      <div name="ui-mask-fade" class="ui-popup-mask" style="display:none;"></div>
      <div name="ui-slide-up" class="ui-popup-box ui-slide-up" style="display:none;">
        <div class="ui-popup-title-bar title-align-center large-radius" style="display:none;">
          <!---->
          <div class="title-bar-title"></div>
          <!---->
          <!---->
        </div>
        <div class="ui-selector-container">
          <div class="ui-scroll-view" style="max-height:auto;min-height:auto;">
            <!---->
            <div class="scroll-view-container">
              <!---->
              <div class="selector-header">
                Header Slot
              </div>
              <div class="ui-radio-list ui-selector-list">
                <div class="ui-cell-item ui-radio-item">
                  <div class="ui-cell-item-body">
                    <!---->
                    <div class="ui-cell-item-content">
                      <!---->
                      <!---->
                      <div class="selector-item-body">
                        <div class="selector-item-left"><span class="holder">A</span></div>
                        <div class="selector-item-content">
                          <p class="selector-item-title">选项一</p>
                          <p class="selector-item-brief">使用slot-scope-0</p>
                        </div>
                      </div>
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-radio">
                        <div class="ui-radio-icon"><i class="ui-icon icon-font ui-icon-check check lg" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="ui-cell-item ui-radio-item">
                  <div class="ui-cell-item-body">
                    <!---->
                    <div class="ui-cell-item-content">
                      <!---->
                      <!---->
                      <div class="selector-item-body">
                        <div class="selector-item-left"><span class="holder">B</span></div>
                        <div class="selector-item-content">
                          <p class="selector-item-title">选项二</p>
                          <p class="selector-item-brief">使用slot-scope-1</p>
                        </div>
                      </div>
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-radio">
                        <div class="ui-radio-icon"><i class="ui-icon icon-font ui-icon-check check lg" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="ui-cell-item ui-radio-item is-disabled">
                  <div class="ui-cell-item-body">
                    <!---->
                    <div class="ui-cell-item-content">
                      <!---->
                      <!---->
                      <div class="selector-item-body disabled">
                        <div class="selector-item-left"><span class="holder">C</span></div>
                        <div class="selector-item-content">
                          <p class="selector-item-title">选项三</p>
                          <p class="selector-item-brief">使用slot-scope-2</p>
                        </div>
                      </div>
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-radio is-disabled">
                        <div class="ui-radio-icon"><i class="ui-icon icon-font ui-icon-check-disabled check-disabled lg" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="ui-cell-item ui-radio-item no-border">
                  <div class="ui-cell-item-body">
                    <!---->
                    <div class="ui-cell-item-content">
                      <!---->
                      <!---->
                      <div class="selector-item-body">
                        <div class="selector-item-left"><span class="holder">D</span></div>
                        <div class="selector-item-content">
                          <p class="selector-item-title">选项四</p>
                          <p class="selector-item-brief">使用slot-scope-3</p>
                        </div>
                      </div>
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-radio">
                        <div class="ui-radio-icon"><i class="ui-icon icon-font ui-icon-check check lg" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <div class="selector-footer">
                Footer Slot
              </div>
              <!---->
            </div>
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Selector - Demo Multi mode 1`] = `
<div class="ui-example-child ui-example-child-selector ui-example-child-selector-4">
  <fieldset class="ui-field">
    <!---->
    <div class="ui-field-content">
      <div class="ui-field-item is-browser">
        <div class="ui-field-item-content"><label class="ui-field-item-title">多选模式</label>
          <!---->
          <div class="ui-field-item-control">1</div>
          <div class="ui-field-item-right"> <i class="ui-icon icon-font ui-icon-arrow-right arrow-right md" style="color:;"></i></div>
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
  <div class="ui-selector is-normal">
    <div class="ui-popup inner-popup with-mask bottom" style="display:none;">
      <div name="ui-mask-fade" class="ui-popup-mask" style="display:none;"></div>
      <div name="ui-slide-up" class="ui-popup-box ui-slide-up" style="display:none;">
        <div class="ui-popup-title-bar title-align-center large-radius">
          <div class="title-bar-left ui-popup-cancel">取消</div>
          <div class="title-bar-title">
            <p class="title">多选模式</p>
            <!---->
          </div>
          <div class="title-bar-right ui-popup-confirm">确定</div>
          <!---->
        </div>
        <div class="ui-selector-container">
          <div class="ui-scroll-view" style="max-height:auto;min-height:320px;">
            <!---->
            <div class="scroll-view-container">
              <!---->
              <div class="ui-check-group ui-check-list ui-selector-list">
                <div class="ui-cell-item ui-check-item is-checked">
                  <div class="ui-cell-item-body">
                    <!---->
                    <div class="ui-cell-item-content">
                      <p class="ui-cell-item-title">选项一</p>
                      <!---->
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-check is-checked">
                        <div class="ui-check-icon"><i class="ui-icon icon-font ui-icon-checked checked md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="ui-cell-item ui-check-item">
                  <div class="ui-cell-item-body">
                    <!---->
                    <div class="ui-cell-item-content">
                      <p class="ui-cell-item-title">选项二</p>
                      <!---->
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-check">
                        <div class="ui-check-icon"><i class="ui-icon icon-font ui-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="ui-cell-item ui-check-item">
                  <div class="ui-cell-item-body">
                    <!---->
                    <div class="ui-cell-item-content">
                      <p class="ui-cell-item-title">选项三</p>
                      <!---->
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-check">
                        <div class="ui-check-icon"><i class="ui-icon icon-font ui-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="ui-cell-item ui-check-item">
                  <div class="ui-cell-item-body">
                    <!---->
                    <div class="ui-cell-item-content">
                      <p class="ui-cell-item-title">选项四</p>
                      <!---->
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-check">
                        <div class="ui-check-icon"><i class="ui-icon icon-font ui-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
              </div>
              <!---->
            </div>
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Selector - Demo No need to confirm 1`] = `
<div class="ui-example-child ui-example-child-selector ui-example-child-selector-0">
  <fieldset class="ui-field">
    <!---->
    <div class="ui-field-content">
      <div class="ui-field-item is-solid is-browser">
        <div class="ui-field-item-content"><label class="ui-field-item-title">普通模式</label>
          <!---->
          <div class="ui-field-item-control">选项二</div>
          <div class="ui-field-item-right"> <i class="ui-icon icon-font ui-icon-arrow-right arrow-right md" style="color:;"></i></div>
        </div>
        <!---->
      </div>
    </div>
    <!---->
  </fieldset>
  <div class="ui-selector is-normal">
    <div class="ui-popup inner-popup with-mask bottom" style="display:none;">
      <div name="ui-mask-fade" class="ui-popup-mask" style="display:none;"></div>
      <div name="ui-slide-up" class="ui-popup-box ui-slide-up" style="display:none;">
        <div class="ui-popup-title-bar title-align-center large-radius">
          <!---->
          <div class="title-bar-title">
            <p class="title">普通模式</p>
            <!---->
          </div>
          <!---->
          <div class="title-bar-right ui-popup-close"><i class="ui-icon icon-font ui-icon-close close lg" style="color:;"></i></div>
        </div>
        <div class="ui-selector-container">
          <div class="ui-scroll-view" style="max-height:320px;min-height:auto;">
            <!---->
            <div class="scroll-view-container">
              <!---->
              <div class="ui-radio-list ui-selector-list">
                <div class="ui-cell-item ui-radio-item">
                  <div class="ui-cell-item-body">
                    <!---->
                    <div class="ui-cell-item-content">
                      <p class="ui-cell-item-title">选项一</p>
                      <!---->
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-radio">
                        <div class="ui-radio-icon"><i class="ui-icon icon-font ui-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="ui-cell-item ui-radio-item is-selected">
                  <div class="ui-cell-item-body">
                    <!---->
                    <div class="ui-cell-item-content">
                      <p class="ui-cell-item-title">选项二</p>
                      <!---->
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-radio is-checked">
                        <div class="ui-radio-icon"><i class="ui-icon icon-font ui-icon-checked checked md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="ui-cell-item ui-radio-item">
                  <div class="ui-cell-item-body">
                    <!---->
                    <div class="ui-cell-item-content">
                      <p class="ui-cell-item-title">选项三</p>
                      <!---->
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-radio">
                        <div class="ui-radio-icon"><i class="ui-icon icon-font ui-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="ui-cell-item ui-radio-item">
                  <div class="ui-cell-item-body">
                    <!---->
                    <div class="ui-cell-item-content">
                      <p class="ui-cell-item-title">选项四</p>
                      <!---->
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-radio">
                        <div class="ui-radio-icon"><i class="ui-icon icon-font ui-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="ui-cell-item ui-radio-item">
                  <div class="ui-cell-item-body">
                    <!---->
                    <div class="ui-cell-item-content">
                      <p class="ui-cell-item-title">选项五</p>
                      <!---->
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-radio">
                        <div class="ui-radio-icon"><i class="ui-icon icon-font ui-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="ui-cell-item ui-radio-item">
                  <div class="ui-cell-item-body">
                    <!---->
                    <div class="ui-cell-item-content">
                      <p class="ui-cell-item-title">选项六</p>
                      <!---->
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-radio">
                        <div class="ui-radio-icon"><i class="ui-icon icon-font ui-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="ui-cell-item ui-radio-item">
                  <div class="ui-cell-item-body">
                    <!---->
                    <div class="ui-cell-item-content">
                      <p class="ui-cell-item-title">选项七</p>
                      <!---->
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-radio">
                        <div class="ui-radio-icon"><i class="ui-icon icon-font ui-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="ui-cell-item ui-radio-item">
                  <div class="ui-cell-item-body">
                    <!---->
                    <div class="ui-cell-item-content">
                      <p class="ui-cell-item-title">选项八</p>
                      <!---->
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-radio">
                        <div class="ui-radio-icon"><i class="ui-icon icon-font ui-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="ui-cell-item ui-radio-item">
                  <div class="ui-cell-item-body">
                    <!---->
                    <div class="ui-cell-item-content">
                      <p class="ui-cell-item-title">选项九</p>
                      <!---->
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-radio">
                        <div class="ui-radio-icon"><i class="ui-icon icon-font ui-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <div class="ui-cell-item ui-radio-item no-border">
                  <div class="ui-cell-item-body">
                    <!---->
                    <div class="ui-cell-item-content">
                      <p class="ui-cell-item-title">选项十</p>
                      <!---->
                    </div>
                    <div class="ui-cell-item-right"><label class="ui-radio">
                        <div class="ui-radio-icon"><i class="ui-icon icon-font ui-icon-check check md" style="color:;"></i></div>
                        <!---->
                      </label>
                      <!---->
                    </div>
                  </div>
                  <!---->
                </div>
                <!---->
              </div>
              <!---->
            </div>
            <!---->
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
